# kio-stash

./: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  Messages.sh  Messsages.sh  README.md  dirlist.h  fs.cpp  fs.h  kio_staging.cpp  kio_staging.h  org.kde.StagingNotifier.xml  staging.json  staging_adaptor.cpp  staging_adaptor.h  stagingnotifier.cpp  stagingnotifier.desktop  stagingnotifier.h  stash_adaptor.cpp  stash_adaptor.h  stashnotifier.cpp  stashnotifier.desktop  stashnotifier.h
add-staging/: add-staging.pro  main.cpp
dbus/: CMakeLists.txt  org.kde.StagingNotifier.xml  org.kde.kio.StashNotifier.xml
po/ar/: kio5_stash.po
po/be/: kio5_stash.po
po/ca/: kio5_stash.po
po/ca@valencia/: kio5_stash.po
po/cs/: kio5_stash.po
po/da/: kio5_stash.po
po/de/: kio5_stash.po
po/el/: kio5_stash.po
po/en_GB/: kio5_stash.po
po/eo/: kio5_stash.po
po/es/: kio5_stash.po
po/et/: kio5_stash.po
po/eu/: kio5_stash.po
po/fi/: kio5_stash.po
po/fr/: kio5_stash.po
po/ga/: kio5_stash.po
po/gl/: kio5_stash.po
po/he/: kio5_stash.po
po/hi/: kio5_stash.po
po/ia/: kio5_stash.po
po/it/: kio5_stash.po
po/ja/: kio5_stash.po
po/ka/: kio5_stash.po
po/ko/: kio5_stash.po
po/lt/: kio5_stash.po
po/nl/: kio5_stash.po
po/nn/: kio5_stash.po
po/pl/: kio5_stash.po
po/pt/: kio5_stash.po
po/pt_BR/: kio5_stash.po
po/ro/: kio5_stash.po
po/ru/: kio5_stash.po
po/sk/: kio5_stash.po
po/sl/: kio5_stash.po
po/sv/: kio5_stash.po
po/ta/: kio5_stash.po
po/tr/: kio5_stash.po
po/ug/: kio5_stash.po
po/uk/: kio5_stash.po
po/zh_CN/: kio5_stash.po
po/zh_TW/: kio5_stash.po
src/: CMakeLists.txt  Messages.sh  org.kde.filestash.appdata.xml
src/iodaemon/: CMakeLists.txt  fs.cpp  fs.h  stash_adaptor.cpp  stash_adaptor.h  stashnotifier.cpp  stashnotifier.h  stashnotifier.json  testdaemon.cpp
src/ioslave/: CMakeLists.txt  ioslave.cpp  ioslave.h  ioslave.json
src/kioworker/: CMakeLists.txt  filestash.cpp  filestash.h  filestash.json
tests/: CMakeLists.txt  slavetest.cpp  slavetest.h  testdaemon.cpp  workertest.cpp  workertest.h
